src/test/ui/parser/keyword-try-as-identifier-edition2018.stderr
error: expected identifier, found reserved keyword `try`
  --> $DIR/keyword-try-as-identifier-edition2018.rs:4:9
   |
LL |     let try = "foo";
   |         ^^^ expected identifier, found reserved keyword
   |
help: you can escape reserved keywords to use them as identifiers
   |
LL |     let r#try = "foo";
   |         ^^^^^

error: aborting due to previous error

